feat: solsec dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 /prisma/db.sqlite
 /prisma/db.sqlite-journal
 db.sqlite
+prisma/migration_lock.toml
 
 # next.js
 /.next/
@@ -44,3 +45,6 @@ yarn-error.log*
 
 # idea files
 .idea
+
+# migrations
+*/migrations/
