--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
-    "start": "next start",
+    "start": "pnpm prisma db seed && next start",
     "typecheck": "tsc --noEmit"
   },
   "prisma": {
